# nasm-devkit

./: .gitignore  CMakeLists.txt
cmake/: GenGitignore.cmake
devkit/: GUIDE.md
src/: main.nasm  program.nasm
tools/: bootstrap.sh
